--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -129,11 +129,11 @@ Durant cette séance, nous avons principalement continué nos recherches toujours 
 Un début de compte-rendu à commencé à être rédigé ainsi que le projet java final avec lequel les programmes seront implémentés a été créé.
 
 \subsection{Séance 3}
-Pendant cette séance, nous nous sommes penchés sur le problème de l'attaque de l'homme du milieu. Après quelques recherches, nous avons pu commencer son implémentation basique et ainsi répondre au prolongement n°3.
+Pendant cette séance, nous nous sommes penchés sur le problème de l'attaque de l'homme du milieu. Après quelques recherches, nous avons pu commencer son implémentation basique et ainsi répondre au prolongement n°3. En vue de la simplicité de l'attaque nous nous sommes aussi documenté sur les différentes manières de contrés celle-ci, comme SSL ou son succésseur TLS. 
 
 
 \subsection{Séance 4}
-Lors de cette dernière séance, nous avons principalement recherché des informations à propos du problème du logarithme discret, son principe et son lien avec la méthode de Diffie-Hellman.
+Lors de cette dernière séance, nous avons principalement recherché des informations à propos du problème du logarithme discret, son principe et son lien avec la méthode de Diffie-Hellman. Nous avons collecté des informations sur l'algorithme babystep giantstep, mais aussi d'autres alternatives commes l'algorithme de Pollard's rho. 
 
 
 \subsection{Hors séance}
